content/f5-cis-kubernetes/namespaces-isolation-ingress/deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    cis_scanner_zone: zone_1
  name: cistest100
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app
  name: app
  namespace: cistest100
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - image: kylinsoong/backend:0.0.4
        name: backend
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app
    cis.f5.com/as3-tenant: cistest100
    cis.f5.com/as3-app: cistest100
    cis.f5.com/as3-pool: cistest100_app_svc_pool
  name: app-svc
  namespace: cistest100
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: app
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress01
  namespace: cistest100
  annotations:
    virtual-server.f5.com/ip: "10.1.10.61"
    virtual-server.f5.com/partition: "k8s"
    virtual-server.f5.com/balance: "least-connections-member"
spec:
  rules:
  - host: app1.apps.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    cis_scanner_zone: zone_1
  name: cistest101
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app
  name: app
  namespace: cistest101
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - image: kylinsoong/backend:0.0.4
        name: backend
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app
    cis.f5.com/as3-tenant: cistest101
    cis.f5.com/as3-app: cistest101
    cis.f5.com/as3-pool: cistest101_app_svc_pool
  name: app-svc
  namespace: cistest101
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: app
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress01
  namespace: cistest101
  annotations:
    virtual-server.f5.com/ip: "10.1.10.61"
    virtual-server.f5.com/partition: "k8s"
    virtual-server.f5.com/balance: "least-connections-member"
spec:
  rules:
  - host: app2.apps.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    cis_scanner_zone: zone_1
  name: cistest102
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app
  name: app
  namespace: cistest102
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - image: kylinsoong/backend:0.0.4
        name: backend
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app
    cis.f5.com/as3-tenant: cistest102
    cis.f5.com/as3-app: cistest102
    cis.f5.com/as3-pool: cistest102_app_svc_pool
  name: app-svc
  namespace: cistest102
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: app
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress01
  namespace: cistest102
  annotations:
    virtual-server.f5.com/ip: "10.1.10.62"
    virtual-server.f5.com/partition: "k8s"
    virtual-server.f5.com/balance: "least-connections-member"
spec:
  rules:
  - host: app3.apps.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: app-svc
          servicePort: 80
---
apiVersion: v1
kind: Namespace
metadata:
  name: cistest103
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app
  name: app
  namespace: cistest103
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - image: kylinsoong/backend:0.0.4
        name: backend
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app
    cis.f5.com/as3-tenant: cistest103
    cis.f5.com/as3-app: cistest103
    cis.f5.com/as3-pool: cistest103_app_svc_pool
  name: app-svc
  namespace: cistest103
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: app
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress01
  namespace: cistest103
  annotations:
    virtual-server.f5.com/ip: "10.1.10.63"
    virtual-server.f5.com/partition: "k8s"
    virtual-server.f5.com/balance: "least-connections-member"
spec:
  rules:
  - host: app4.apps.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: app-svc
          servicePort: 80
